Fix overflow for index page

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2,8 +2,9 @@ content{
     width: 100%;
     position: relative;
     /*position: absolute;*/
-    padding-top: 100px;
+    margin-top: 100px;
 
+    overflow-y: hidden;
     display: block;
     /*left: 30%;*/
     /*z-index:100;*/
@@ -13,6 +14,7 @@ content{
     /*position: fixed;*/
 
     display: block;
+
     /*display: inline;*/
     /*top: 45%;*/
     /*left: 40%;*/
