--- a/css/project_style.css
+++ b/css/project_style.css
@@ -3,14 +3,15 @@
 content{
     width: 100%;
     height: 90%;
-    /*position: fixed;*/
-    position: absolute;
+    /* position: fixed; */
+    /* position: absolute; */
     padding-top: 100px;
 
+    display: block;
+
     /*top: 100px;*/
-    overflow-y: scroll;
-    overflow-x: hidden;
-    z-index: 10;
+    overflow: hidden;
+    /* z-index: 1; */
     /*left: 30%;*/
     /*z-index:100;*/
 }
